k8s/angular/angular-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular
  name: angular-svc
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 80
      name: angular
  selector:
    app: angular
  type: ClusterIP
