k8s/angular/angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
spec:
  rules:
  - host: "spring-devops.zapto.org"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-svc
            port:
              name: angular
